log
Fri Mar 11 17:58:51 HSP 2022: 
 tests:  0|7
total_score: 0/70
211d1af
Sat Mar 12 11:50:42 HSP 2022: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|6
total_score: 10/70
df56f7c
Sat Mar 12 11:51:23 HSP 2022: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|6
total_score: 10/70
d09bcd3
Sat Mar 12 11:55:31 HSP 2022: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 20/70
c86c7ef
Mon Mar 14 00:52:38 UTC 2022: 
 tests:  2|5
total_score: 20/70
e019da1
Mon Mar 14 00:59:56 UTC 2022: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:84:3: error: unknown type name ‘vector’; did you mean ‘Vector’?
   vector *arreglo = NULL;
   ^~~~~~
   Vector
exercises.c:86:10: error: request for member ‘datos’ in something not a structure or union
   arreglo->datos = (int *) calloc (n, sizeof(int));
          ^~
exercises.c:90:10: error: request for member ‘capacidad’ in something not a structure or union
   arreglo->capacidad = n;
          ^~
exercises.c:92:10: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return arreglo;
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
595f3dc
Mon Mar 14 01:00:29 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
47e3e60
Mon Mar 14 01:04:33 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
87fea40
Mon Mar 14 01:07:30 UTC 2022: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
2226668
Mon Mar 14 01:11:24 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:101:8: error: incompatible types when assigning to type ‘Vector {aka struct <anonymous>}’ from type ‘int’
   v[i] = valor;
        ^
Compilation failed
caac533
Mon Mar 14 01:17:40 UTC 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:102:10: error: invalid type argument of ‘->’ (have ‘Vector {aka struct <anonymous>}’)
   arreglo->v[i] = valor;
          ^~
Compilation failed
b1c2447
Mon Mar 14 01:17:50 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:102:10: error: ‘Vector {aka struct <anonymous>}’ has no member named ‘v’
   arreglo.v[i] = valor;
          ^
exercises.c:100:10: error: variable ‘arreglo’ set but not used [-Werror=unused-but-set-variable]
   Vector arreglo;
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e6e2e84
Mon Mar 14 01:18:23 UTC 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:102:10: error: ‘Vector {aka struct <anonymous>}’ has no member named ‘v’
   arreglo->v[i] = valor;
          ^~
Compilation failed
e34ed71
Mon Mar 14 01:18:31 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:102:10: error: ‘arreglo’ is a pointer; did you mean to use ‘->’?
   arreglo.v[i] = valor;
          ^
          ->
exercises.c:100:11: error: variable ‘arreglo’ set but not used [-Werror=unused-but-set-variable]
   Vector *arreglo = malloc (sizeof(Vector));
           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
25041c4
